Add createSignature endpoint and refactor Namirial client
